--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -12,9 +12,11 @@
     <None Remove="Data\202102.txt" />
     <None Remove="Data\202103.txt" />
     <None Remove="Data\202104.txt" />
+    <None Remove="Data\202105.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Data\202105.txt" />
     <EmbeddedResource Include="Data\202104.txt" />
     <EmbeddedResource Include="Data\202103.txt" />
     <EmbeddedResource Include="Data\202102.txt" />
