--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -15,9 +15,11 @@
     <None Remove="Data\202105.txt" />
     <None Remove="Data\202106.txt" />
     <None Remove="Data\202107.txt" />
+    <None Remove="Data\202108.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Data\202108.txt" />
     <EmbeddedResource Include="Data\202107.txt" />
     <EmbeddedResource Include="Data\202106.txt" />
     <EmbeddedResource Include="Data\202105.txt" />
