--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -16,9 +16,11 @@
     <None Remove="Data\202106.txt" />
     <None Remove="Data\202107.txt" />
     <None Remove="Data\202108.txt" />
+    <None Remove="Data\Y2015\201501.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Data\Y2015\201501.txt" />
     <EmbeddedResource Include="Data\Y2021\202108.txt" />
     <EmbeddedResource Include="Data\Y2021\202107.txt" />
     <EmbeddedResource Include="Data\Y2021\202106.txt" />
