--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -18,10 +18,12 @@
     <None Remove="Data\202108.txt" />
     <None Remove="Data\Y2015\201501.txt" />
     <None Remove="Data\Y2015\201502.txt" />
+    <None Remove="Data\Y2015\201503.txt" />
     <None Remove="Data\Y2021\202109.txt" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Data\Y2015\201503.txt" />
     <EmbeddedResource Include="Data\Y2015\201502.txt" />
     <EmbeddedResource Include="Data\Y2015\201501.txt" />
     <EmbeddedResource Include="Data\Y2021\202109.txt" />
