--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -23,12 +23,14 @@
     <None Remove="Data\Y2021\202110.txt" />
     <None Remove="Data\Y2021\202111.txt" />
     <None Remove="Data\Y2021\202112.txt" />
+    <None Remove="Data\Y2021\202113.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Data\Y2015\201503.txt" />
     <EmbeddedResource Include="Data\Y2015\201502.txt" />
     <EmbeddedResource Include="Data\Y2015\201501.txt" />
+    <EmbeddedResource Include="Data\Y2021\202113.txt" />
     <EmbeddedResource Include="Data\Y2021\202112.txt" />
     <EmbeddedResource Include="Data\Y2021\202111.txt" />
     <EmbeddedResource Include="Data\Y2021\202110.txt" />
