--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -26,12 +26,14 @@
     <None Remove="Data\Y2021\202113.txt" />
     <None Remove="Data\Y2021\202114.txt" />
     <None Remove="Data\Y2021\202115.txt" />
+    <None Remove="Data\Y2021\202116.txt" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Data\Y2015\201503.txt" />
     <EmbeddedResource Include="Data\Y2015\201502.txt" />
     <EmbeddedResource Include="Data\Y2015\201501.txt" />
+    <EmbeddedResource Include="Data\Y2021\202116.txt" />
     <EmbeddedResource Include="Data\Y2021\202115.txt" />
     <EmbeddedResource Include="Data\Y2021\202114.txt" />
     <EmbeddedResource Include="Data\Y2021\202113.txt" />
